# mICal-trigger-efficiency-calculation

./: .gitignore  CMakeLists.txt  Dict.cc  INOEvent.cc  INOEvent.h  INOTimeGroupingModule.cc  INOTimeGroupingModule.h  README.md  SNM.h  alignment.cpp  calibration.db  computeStripTimeDelayFromHistograms.cpp  create-orientation-db.py  execute  grouping-and-efficiency.cpp  parallel-computation.cpp  run-corry.py  submit-job.py  time-alignment.cpp
calibration-data/: SNM_RPCv4t_evtraw_20181212_193056_RawTimeOffset.txt
corryvrekan/EventLoaderINO/: CMakeLists.txt  EventLoaderINO.cpp  EventLoaderINO.h  README.md  SNM.h
include/: DynamicHistogram.h  INOCalibrationManager.h  INOEvent.h  INOHelperFunctions.h  INOStorageManager.h  INOStructs.h  INOTimeGroupingModule.h
src/: INOCalibrationManager.cc  INOEvent.cc  INOStorageManager.cc  INOTimeGroupingModule.cc  SNM.cc
