# SPDX-FileCopyrightText: 2023-2024 CERN and the Corryvreckan authors
# SPDX-License-Identifier: MIT

# CORRYVRECKAN_ENABLE_DEFAULT(OFF)
CORRYVRECKAN_DETECTOR_MODULE(MODULE_NAME)
CORRYVRECKAN_DETECTOR_TYPE(${MODULE_NAME} "RPC")

# Add source files to library
CORRYVRECKAN_MODULE_SOURCES(${MODULE_NAME} SNM.cpp EventLoaderINO.cpp)

FIND_PACKAGE(ROOT REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${MODULE_NAME} SYSTEM PRIVATE ${ROOT_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${MODULE_NAME} ${ROOT_LIBRARIES})

# Provide standard install target
CORRYVRECKAN_MODULE_INSTALL(${MODULE_NAME})
